# emulator

./: CMakeLists.txt
example asm programs/bubel_sort_MNPU2/: bubel_sort_MNPU2.asm
fib_MNPU2/: fib_MNPU2.asm
src/: assembler.cpp  assembler.h  consola_font.h  display.cpp  display.h  editor.cpp  editor.h  gui.cpp  gui.h  isa.cpp  isa.h  main.cpp  monitors.cpp  monitors.h
src/tmp/3x3_MNPU2/: 3x3_MNPU2.asm  3x3_MNPU2.schem  3x3_MNPU2.txt
src/tmp/fib_MNPU2/: fib_MNPU2.asm  fib_MNPU2.schem  fib_MNPU2.txt  fib_MNPU2_compiled.txt
